Fixed error where it would redirect to the wrong page when deleting a course. Removes spring security. implemented a method to assign a new instructor to a class in the UniversityCRM project